Migrate remaining config-FQCN extension points to realm-aware loading
Controller, server and tools resolved configurable implementation classes via
Class.forName / ServiceLoader, which only sees the system classpath. Under the
realm-isolation model those miss implementations living in plugin realms. Route
them through PluginManager (loadClass / loadServices), preserving each site's
constructor-lookup semantics (getDeclaredConstructor vs getConstructor) and error
handling:

- controller: AccessControlFactory (BaseControllerStarter), RebalancePreCheckerFactory,
  MetadataEventNotifierFactory, LineageManagerFactory (public ControllerConf ctor),
  SegmentCompletionFSMFactory, RealtimeOffsetAutoResetManager
- server: ServerInstance transform-function classes (chain the cause so the new
  suppressed-NCDFE diagnostics survive)
- tools: KafkaStarterUtils stream-consumer discovery, PinotServiceManager ServiceStartable

Adds loader regression tests for AccessControlFactory, LineageManagerFactory (incl.
the parameterized-constructor contract), RebalancePreCheckerFactory, and KafkaStarterUtils.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>